--- a/public/assets/css/ani.css
+++ b/public/assets/css/ani.css
@@ -18,6 +18,7 @@ body{
      animation-name: changecolor;
      animation-duration: 20s;
      animation-iteration-count: infinite;
+     scroll-behavior: smooth;
      /* background: #333150;
     color: white; */
 }
@@ -156,3 +157,28 @@ body{
     }
 
 }
+
+
+/* width */
+::-webkit-scrollbar {
+    width: 15px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: #007ab3;
+    transition: all 0.7s;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgb(251, 255, 0);
+  }
+
